<resources>
    <string name="app_name">PharmacIST</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_add_pharmacy">AddPharmacyActivity</string>
    <string name="title_activity_add_stock">AddStockActivity</string>

    <!-- Login Texts -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_guest">Login as Guest</string>
    <string name="login_text">Don\'t have an account? \nCreate one now, or simply login as a Guest!</string>

    <!-- Home texts -->
    <string name="home_map_title">Maps</string>
    <string name="home_map_subtitle">Nearby pharmacies</string>
    <string name="home_pill_title">Medicine</string>
    <string name="home_pill_subtitle">Find medicines</string>
    <string name="home_add_pharmacy_title">Add Pharmacy</string>
    <string name="home_add_pharmacy_subtitle">Create new Pharmacy</string>
    <string name="home_placeholder_title">Title</string>
    <string name="home_placeholder_subtitle">Subtitle</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Pharmacy Texts -->
    <string name="pharmacy_name">Name</string>
    <string name="pharmacy_address">Address</string>
    <string name="pharmacy_latitude">Latitude</string>
    <string name="pharmacy_longitude">Longitude</string>
    <string name="add_photo">Add Photo</string>
    <string name="create_pharmacy">Create Pharmacy</string>
    <string name="search_for_a_medicine">Search for a medicine</string>
    <string name="search">Search</string>
    <string name="closest_pharmacy">Closest pharmacy:</string>
    <string name="btn_navigate">Directions</string>
    <string name="btn_add_stock">Add Stock</string>
    <string name="btn_purchase_stock">Purchase Stock</string>


    <!-- Placeholder Text -->
    <string name="placeholder_1">Placeholder 1</string>
    <string name="placeholder_2">Placeholder 2</string>
    <string name="placeholder_3">Placeholder 3</string>
    <string name="placeholder_4">Placeholder 4</string>
    <string name="show_pharmacy_info">Show Pharmacy Information</string>
    <string name="medicine_default">Medicine Example</string>
    <string name="default_info_panel">Information Panel</string>
    <string name="search_medicine">Medicine Search</string>
    <string name="item">Item</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="pharmacist">PharmacIST</string>
    <string name="purpose">Purpose/Preferred Use</string>
    <string name="quantity">Quantity to Add</string>
    <string name="create_medicine">Create Medicine</string>
    <string name="show_on_map">Show on Map</string>


    <string name="closest_pharmacies">Closest Pharmacies</string>
    <string name="stock">Stock</string>
    <string name="share">Share</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="notify_me_when_medicine_available">Notify me when this medicine is available</string>
    <string name="logout">Logout</string>
    <string name="medicine_info">See Info</string>
    <string name="guest_user">Guest User</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="some_features_may_not_function_properly">Some features may not function properly</string>
    <string name="continue_msg">CONTINUE</string>
    <string name="retry">RETRY</string>
    <string name="data_saver_mode">Data Saver Mode</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="are_you_sure">Are you sure clear the cache?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maintenance_title">Under Maintenance</string>
    <string name="maintenance_message">App is not available at the moment</string>
    <string name="close">CLOSE</string>
</resources>