<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PharmacyInformationActivity">

    <TextView
        android:id="@+id/panel_pharmacy_name"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:text="@string/default_info_panel"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/pharmacy_panel_search"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/search_view_bg"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panel_pharmacy_name"
        app:queryHint="@string/search_for_a_medicine" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pharmacy_panel_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="268dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pharmacy_panel_search"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_add_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addStock"
        android:text="@string/btn_add_stock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pharmacy_panel_recycle_view"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/btn_purchase_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="purchaseStock"
        android:text="@string/btn_purchase_stock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_add_stock"
        app:layout_constraintTop_toBottomOf="@+id/pharmacy_panel_recycle_view" />

</androidx.constraintlayout.widget.ConstraintLayout>