<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/maintenance_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/maintenance_title"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/maintenance_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/maintenance_message"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/maintenance_dialog_title"
            app:layout_constraintStart_toStartOf="@+id/maintenance_dialog_title"
            app:layout_constraintTop_toBottomOf="@+id/maintenance_dialog_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/maintenance_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/close"
            app:layout_constraintEnd_toEndOf="@+id/maintenance_dialog_message"
            app:layout_constraintStart_toStartOf="@+id/maintenance_dialog_message"
            app:layout_constraintTop_toBottomOf="@+id/maintenance_dialog_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>